public/global.css
@font-face {
  font-family: "Heebo";
  src: url("Heebo-VariableFont_wght.ttf") format("truetype"); /* Safari, Android, iOS */
  font-weight: 100 1000;
}

html,
body {
  position: relative;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  background-color: #cfefcf;
  overflow: hidden;
}

body {
  color: #333;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Heebo";
}

main {
  max-width: 100vw;
}

a {
  color: rgb(0, 100, 200);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

a:visited {
  color: rgb(0, 80, 160);
}

label {
  display: block;
}

input,
button,
select,
textarea {
  font-family: inherit;
  font-size: inherit;
  -webkit-padding: 0.4em 0;
  padding: 0.4em;
  margin: 0 0 0.5em 0;
  box-sizing: border-box;
  border: 1px solid #ccc;
  border-radius: 2px;
}

input:disabled {
  color: #ccc;
}

button {
  color: #333;
  background-color: #f4f4f4;
  outline: none;
  margin: 0;
}

button:disabled {
  color: #999;
}

button:not(:disabled):active {
  background-color: #ddd;
}

button:focus {
  border-color: #666;
}

h1,
h2,
h3,
h4 {
  margin: 0;
}

h1 {
  line-height: 1em;
}

@media print {
  body {
    visibility: hidden;
  }
  .A4 {
    visibility: visible;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    -webkit-box-shadow: none !important;
    -moz-box-shadow: none !important;
    box-shadow: none !important;
  }
}

